syntax = "proto3";

option csharp_namespace = "Product.Grpc.Command";

service RemoveProductGrpc{
	rpc RemoveProduct (RemoveProductRequest) returns (RemoveProductResponse);
}

message RemoveProductResponse{
	bool result=1;
}

message RemoveProductRequest{
		string productIdentity=1;
}
