syntax = "proto3";

option csharp_namespace = "Product.Grpc.Command";

service UpdateProductGrpc{
	rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
}

message UpdateProductResponse{
	bool result=1;
}

message UpdateProductRequest{
	string productIdentity=1;
	string productName=2;
	double unitPrice=3;
}
